--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,8 @@
 *.iml
 .gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-/.idea/vcs.xml
-/.idea/misc.xml
-/.idea/gradle.xml
-/.idea/runConfigurations.xml
-/.idea/codeStyles
-/.idea/dictionaries
-/.idea/icon.png
-/.idea/jarRepositories.xml
-/.idea/compiler.xml
+local.properties
+.idea
 .DS_Store
-/build
+build/
 /captures
 .externalNativeBuild
-.idea/encodings.xml
