--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,9 @@ buildscript {
     ext.kotlin_version = '1.4.0'
     repositories {
         google()
-        maven { url "https://jitpack.io" }
-        jcenter()
+//        maven { url "https://jitpack.io" }
+//        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.0'
