--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -62,3 +62,7 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.3.0'
     androidTestImplementation 'androidx.test:runner:1.3.0'
 }
+task wrapper(type: Wrapper){
+    gradleVersion = '7.2'
+}
+tasks.register("prepareKotlinBuildScriptModel"){}
